--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     font-family: "Quicksand", sans-serif;
     color: #c4c4c4;
     background-color: #1d1d1d;
-    max-width: 90%;
     margin: 0 auto;
     overflow-y: hidden;
     text-transform: uppercase;
@@ -11,19 +10,16 @@ body {
 /* Header */
 
 nav {
-    border-radius: 0.9rem;
     background-color: #0c0c0c;
-    margin: 2rem 0;
 }
 
 nav ul {
-    width: 80%;
+    max-width: 80%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-around;
-    padding: 2rem;
+    padding: 1.5rem;
     list-style-type: none;
 }
 
@@ -39,13 +35,17 @@ button {
     text-transform: uppercase;
 }
 
+form {
+    display: none;
+}
+
 /* Main */
 
 .container {
     display: grid;
     grid-template: 250px / repeat(4, 1fr);
     grid-gap: 2rem;
-    margin: 2rem 0;
+    margin: 2rem;
 }
 
 .container-card {
@@ -61,6 +61,11 @@ button {
     margin: 0;
 }
 
+.container-card:hover {
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    transition-duration: .3s;
+}
+
 .num {
     font-size: 2.5rem;
 }
@@ -72,7 +77,7 @@ button {
     grid-template: 450px / repeat(2, 1fr);
     grid-gap: 2rem;
     text-align: center;
-    margin: 2rem 0;
+    margin: 2rem;
 }
 
 .container-secundario-card {
@@ -82,6 +87,11 @@ button {
 
 .container-secundario-card h1 {
     padding-bottom: 1rem;
+}
+
+.container-secundario-card:hover {
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    transition-duration: .3s;
 }
 
 table {
