--- a/style.css
+++ b/style.css
@@ -35,12 +35,37 @@ button {
     text-transform: uppercase;
 }
 
-form {
+/* Form */
+#form {
     display: none;
+    justify-content: space-around;
+    flex-direction: row;
+    padding: 1rem;
+    padding-bottom: 0;
+}
+
+#form label {
+    display: flex;
+    align-items: center;
+    font-size: 1.25rem;
+}
+
+#submit {
+    background: transparent;
+    color: #c4c4c4;
+    border: none;
+    border-bottom: 1px solid #c4c4c4;
+    cursor: pointer;
+    font-size: 1.25rem;
+    text-transform: uppercase;
 }
 
 small {
     display: none;
+    color: green;
+    justify-content: center;
+    padding-top: 1.5rem;
+    font-size: 1rem;
 }
 
 /* Main */
